# src/api/app/Models/Service.php
@@ -8,7 +8,51 @@ use Illuminate\Contracts\Auth\Authenticatable as AuthenticatableContract;
 use Illuminate\Database\Eloquent\Factories\HasFactory;
 use Illuminate\Database\Eloquent\Model;
 use Laravel\Lumen\Auth\Authorizable;
+use OpenApi\Annotations\Schema;
+use OpenApi\Annotations\Property;
 
+/**
+ * @Schema(
+ *     schema="Service",
+ *     type="object",
+ *     @Property(
+ *         property="id",
+ *         type="number",
+ *         description="service id"
+ *     ),
+ *     @Property(
+ *         property="third_party",
+ *         type="object",
+ *         description="third party",
+ *         ref="#/components/schemas/ThirdParty",
+ *     ),
+ *     @Property(
+ *         property="client_id",
+ *         type="string",
+ *         description="client id"
+ *     ),
+ *     @Property(
+ *         property="client_secret",
+ *         type="string",
+ *         description="client secret"
+ *     ),
+ *     @Property(
+ *         property="redirect_uri",
+ *         type="string",
+ *         description="redirect uri"
+ *     ),
+ *     @Property(
+ *         property="scope",
+ *         type="string",
+ *         description="scope"
+ *     ),
+ *     @Property(
+ *         property="client_uri",
+ *         type="string",
+ *         description="client uri"
+ *     )
+ * )
+ */
 class Service extends Model
 {
     protected $fillable = [
@@ -19,4 +63,8 @@ class Service extends Model
     {
         return $this->belongsTo(ThirdParty::class);
     }
+
+    protected $hidden = [
+        'created_at', 'updated_at', 'third_party_id'
+    ];
 }
