# src/api/app/Models/ThirdParty.php
@@ -8,10 +8,32 @@ use Illuminate\Contracts\Auth\Authenticatable as AuthenticatableContract;
 use Illuminate\Database\Eloquent\Factories\HasFactory;
 use Illuminate\Database\Eloquent\Model;
 use Laravel\Lumen\Auth\Authorizable;
+use OpenApi\Annotations\Schema;
+use OpenApi\Annotations\Property;
 
+/**
+ * @Schema(
+ *     schema="ThirdParty",
+ *     type="object",
+ *     @Property(
+ *         property="id",
+ *         type="number",
+ *         description="third party id"
+ *     ),
+ *     @Property(
+ *         property="name",
+ *         type="string",
+ *         description="third party name"
+ *     )
+ * )
+ */
 class ThirdParty extends Model
 {
     const GOOGLE   = 1;
     const FACEBOOK = 2;
     const TESS     = 3;
+
+    protected $hidden = [
+        'oauth_uri', 'profile_uri', 'created_at', 'updated_at'
+    ];
 }
